<resources>
    <string name="app_name">Exam</string>
    <string name="header" translatable="false">iProva</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="username_missing">Username is required</string>
    <string name="password_missing">Password is required</string>
    <string name="wrong_password_1">"Username or password you’ve entered is incorrect. You have "</string>
    <string name="wrong_password_2">more attempts</string>
    <string name="exit">Exit</string>
    <string name="Configuration">Configuration</string>
    <string name="Navigation">Navigation</string>
    <string name="GNSS">GNSS</string>
    <string name="History">History</string>
    <string name="Credits">Credits</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>