<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="416dp"
        android:layout_height="302dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mainimg" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="394dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="300dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Configuration" />

        <Button
            android:id="@+id/btnNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Navigation" />

        <Button
            android:id="@+id/btnGNSS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GNSS" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/History" />

        <Button
            android:id="@+id/btnCredits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Credits" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>